[package]
name = "gl_matrix"
version = "0.0.1"
authors = ["Eric Sognefest"]
license = "MIT"
categories = ["wasm", "no-std"]
exclude = ["/.travis.yml", ".gitignore"]
description = "A Rust implementation of glMatrix"
readme = "README.md"
repository = "https://github.com/sognefej/gl_matrix"
documentation = "https://docs.rs/crate/gl_matrix/0.0.1"
homepage = "https://crates.io/crates/gl_matrix"
edition = "2018"

[badges]
travis-ci = { repository = "sognefej/gl-matrix" }
coveralls = { repository = "sognefej/gl-matrix" }

[dependencies]
rand = "0.7.3"

[package.metadata.docs.rs]
all-features = true