[package]
name = "gl_matrix"
version = "0.0.3"
authors = ["Eric Sognefest"]
license = "MIT"
categories = ["wasm", "no-std"]
exclude = ["/.travis.yml", ".gitignore"]
description = "A Rust implementation of glMatrix"
readme = "README.md"
repository = "https://github.com/sognefej/gl-matrix"
documentation = "https://docs.rs/gl-matrix/"
homepage = "https://crates.io/crates/gl-matrix"
edition = "2018"

[badges]
travis-ci = { repository = "sognefej/gl-matrix" }
coveralls = { repository = "sognefej/gl-matrix" }

[dependencies]
rand = "0.7.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
